--- a/templates/scan.html
+++ b/templates/scan.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Network Scanner</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <style>
         /* Notification styles */
         #notification {
@@ -26,17 +27,17 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-gray-50 dark:bg-gray-900 dark:text-white">
     <div class="container mt-4">
         <!-- Notification div -->
-        <div id="notification" style="opacity: 0;"></div>
+<!--        <div id="notification" style="opacity: 0;"></div>-->
         
         <h1>Network Scanner</h1>
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="d-flex justify-content-between">
+                        <div class="flex justify-content-between">
                             <h5>Discovered Devices</h5>
                             <div>
                                 <button id="scanBtn" class="btn btn-primary">Scan Network</button>
@@ -61,7 +62,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
         // Notification function
         function showNotification(message, isError = false) {
