--- a/templates/ssh_client.html
+++ b/templates/ssh_client.html
@@ -274,7 +274,7 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-gray-50 dark:bg-gray-900">
     <div class="container">
         <h1>SSH Client</h1>
         
