--- a/templates/wake-dashboard.html
+++ b/templates/wake-dashboard.html
@@ -160,7 +160,7 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-gray-50 dark:bg-gray-900">
     <!-- Notification div -->
     <div id="notification" style="opacity: 0;"></div>
     
